--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,6 @@
 <!DOCTYPE project>
 
 <project name="PortletTest-portlet" basedir="." default="deploy">
-	<import file="C:\liferay-plugins-sdk-6.1.1\portlets/build-common-portlet.xml" />
+	<import file="../build-common-portlet.xml" />
 </project>
 
